import "Documents/Document.proto";

package AgentSIB.Diadoc.Api.Proto.Documents;

message DocumentList {
	required int32 TotalCount = 1;
	repeated Document Documents = 2;
}
