import "Timestamp.proto";

package AgentSIB.Diadoc.Api.Proto;

message ForwardDocumentEvent
{
	optional Timestamp Timestamp = 1;
	optional string ToBoxId = 2;
}
